ecmascript/parser/tests/typescript-errors/tsc/classes/members/accessibility/privateInstanceMemberAccessibility/input.ts.stderr
error[1005]: Expected a semicolon
  --> $DIR/tests/typescript-errors/tsc/classes/members/accessibility/privateInstanceMemberAccessibility/input.ts:12:12
   |
12 |     a: this.foo; // error
   |            ^

error[1005]: Expected a property name
  --> $DIR/tests/typescript-errors/tsc/classes/members/accessibility/privateInstanceMemberAccessibility/input.ts:12:12
   |
12 |     a: this.foo; // error
   |            ^

